--- a/index.html
+++ b/index.html
@@ -42,15 +42,19 @@
 				</tr>
 			  </tbody>
 			</table>
-		  <hr>		  
-	  	  <hr>
+		  <hr>
+		  <div>
+			<h2><font size="+2">Location</font> </h2>								
+				Monday, June 19th, East hall 11, 1:30pm to 5:00pm. Vancouver Convention Center. Local time, Vancouver (PST)
+				Zoom links to come
+			<hr>
 			<div>
 				<h2><font size="+2">Schedule</font> </h2>								
 				<table>
 					<tr>
 					  <td>13:30</td><td>13:35</td><td>Opening Remarks</td>
 					  </tr><tr>
-					  <td>13:35</td><td>14:15</td><td>Jason Clemons</td><td>foundations of GPU architecture, hardware perspective.</td>
+					  <td>13:35</td><td>14:15</td><td>Jason Clemons</td><td>Foundations of GPU architecture, hardware perspective.</td>
 					  </tr>
 					  <tr>
 					  <td>14:15</td><td>15:00</td><td>Pavlo Molchanov</td><td>Algorithmic views on GPU compute, how to maximize performance</td>
@@ -58,7 +62,7 @@
 					  <tr>
 					  <td>15:00</td><td>15:30</td><td>Coffee Break</td><td></td>
 					  </tr><tr>
-					   <td>15:30</td><td>16:15</td><td>MAying Shen</td><td>Sparsity in DNN and model compression</td>
+					   <td>15:30</td><td>16:15</td><td>Maying Shen</td><td>Sparsity in DNN and model compression</td>
 					</tr>
 					   <tr>
 					   <td>16:15</td><td>17:00</td><td>Hongxu (Danny) Yin</td><td>Recent trends on transformer acceleration, data efficiency and security,</td>
