--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					  <td>13:35</td><td>14:15</td><td>Jason Clemons</td><td>Foundations of GPU architecture, hardware perspective.</td>
 					  </tr>
 					  <tr>
-					  <td>14:15</td><td>15:00</td><td>Pavlo Molchanov</td><td>Algorithmic views on GPU compute, how to maximize performance</td>
+					  <td>14:15</td><td>15:00</td><td>Pavlo Molchanov</td><td>DNN Performance optimization: How to achieve more with less cost, software perspective</td>
 					  </tr>
 					  <tr>
 					  <td>15:00</td><td>15:30</td><td>Coffee Break</td><td></td>
