--- a/index.html
+++ b/index.html
@@ -74,11 +74,52 @@
 			<div>
 				<h2><font size="+2">Instructors</font> </h2>								
 			<p align="center">
-			<img src="./data/maying.png" width="125" height="150" title="Maying Shen">
+<!--			<img src="./data/maying.png" width="125" height="150" title="Maying Shen">
 			<img src="./data/clemons.jpg" width="125"  height="150" title="Jason Clemons">
-			<img src="./data/hongxu.png" width="125" height="150" title="Jason Clemons">
-			<img src="./data/Pavlo_Molchanov.png" width="125" height="150" title="Jason Clemons">
-			</p>
+			<img src="./data/hongxu.png" width="125" height="150" title="Danny Yin">
+			<img src="./data/Pavlo_Molchanov.png" width="125" height="150" title="Pavlo Molchanov">
+			-->
+			<table>
+				<tr>
+				  <td><img src="./data/maying.png" width="125" height="150" title="Maying Shen"></td><td>		
+					Maying Shen is currently a senior autonomous driving research engineer at NVIDIA. Prior to joining NVIDIA,
+	she graduated from CMU majoring in computer vision, where she developed her interest in seeing the world through
+	the computer's eyes. Her interests include deep learning efficiency from both, training and inference side, working
+	on aspects such as neural network pruning, distillation, or quantization among others.</td>
+	</tr>
+	<tr>			  <td>	<img src="./data/clemons.jpg" width="125"  height="150" title="Jason Clemons"></td><td>
+		Jason Clemons received his Ph.D. in computer science and engineering from the University of Michigan, Ann
+		Arbor, MI, USA where he researched computer architectures for mobile computer vision. In his senior research
+		scientist role at NVIDIA his current research focuses on domain-specific computing, in particular the intersection
+		of machine learning, computer vision, and computer architecture. He has worked on machine learning accelerators,
+		computer vision accelerators, accelerating DNN training on GPUs, and accelerating RL using GPUs. He is an IEEE
+		senior member and serves on IEEE International Symposium on Performance Analysis of Systems and Software
+		steering committee.</td>
+	  </tr>
+				  <tr>			  <td>	<img src="./data/hongxu.png" width="125" height="150" title="Danny Yin"></td><td>
+					Hongxu (Danny) Yin is a senior research scientist at Learning and Perception Research (LPR) at NVIDIA. He
+					obtained his Ph.D. at Princeton University, New Jersey, USA, and B. Eng. from Nanyang Technological University, Singapore. He is a recipient of Princeton Yan Huo 94* Graduate Fellowship, Princeton Best Dissertation
+					Finalist within Department, Princeton Natural Sciences and Engineering Fellowship, Defense Science & Technology Agency gold medal, and Thomson Asia Pacific Holdings gold medal. His research interests mainly include
+					data-/execution-efficient and secure deep learning overseeing CNNs and transformers. He has been the organizer
+					of several tutorial/workshop at CVPR and ICCV. He has been featured as Global Outstanding Chinese Power 100
+					Award by 36Kr and Top 60 Elite Chinese in North America by Forbes.</td>
+				  </tr>
+				  <tr>			  <td>	<img src="./data/Pavlo_Molchanov.png" width="125" height="150" title="Pavlo Molchanov"></td><td>
+					Pavlo Molchanov is a principal research scientist and research lead with NVIDIA Research since 2015. His
+					research is focused on efficient deep learning and human-centric computer vision in LPR team lead by Jan Kautz. In
+					the area of network efficiency he is working on methods for model acceleration, inversion, novel architectures and
+					adaptive/conditional inference. In the area of human-centric vision he is working on face/body/hand landmarks and
+					pose estimation, action/gesture recognition and designing novel human-computer interaction systems. He holds a
+					degree in signal processing obtained in Tampere University of Technology, Finland in 2014. He served as a program
+					committee member of IEEE AAAI. He has co-organized the Accelerating Computer Vision with Mixed Precision
+					tutorial in conjunction with ICCV 2019</td>
+				  </tr>
+				 
+				</table>
+									
+			</div>		
+	
+	</p>
 		</div>		
 		<hr>
 		<div>
@@ -92,7 +133,6 @@
 			<li>Jan Kautz, VP of research
 			</ul> 
 		</div>		
-
 
 
 		</td>
