--- a/index.html
+++ b/index.html
@@ -42,31 +42,25 @@
 			  </tbody>
 			</table>
 		  <hr>
-		  <div>
-			<!--
-			<h2><font size="+2">Location</font> </h2>								
-				Monday, June 19th, East hall 11, 1:30pm to 5:00pm. Vancouver Convention Center. Local time, Vancouver (PST)
-				Zoom links to come
-			<hr>
-			-->			
-			<div>
+		  <div>					
+			<div></div>
 				<h2><font size="+2">Schedule</font> </h2>								
 				<table>
 					<tr>
 					  <td>13:30</td><td>13:35</td><td></td><td>Opening Remarks</td>
 					  </tr><tr>
-						<td>13:35</td><td>14:15</td><td> <a href="./data/videos/CVPR2023_tutorial_Clemons.mp4" target="_blank"> <img src="./data/VideoIcon.png" width="20" height="20" title="Video Presentation"> </a> </td><td>Jason Clemons</td><td><a href="./data/presentations/CVPR2023_tutorial_Clemons.pdf" target="_blank">Foundations of Deep Learning hardware.</a></td>
+						<td>13:35</td><td>14:15</td><td> <a href="https://drive.google.com/file/d/1OTZXN9wuJ_-VXUK-kWFYvwPPT-orZWd5/view?usp=sharing" target="_blank"> <img src="./data/VideoIcon.png" width="20" height="20" title="Video Presentation"> </a> </td><td>Jason Clemons</td><td><a href="./data/presentations/CVPR2023_tutorial_Clemons.pdf" target="_blank">Foundations of Deep Learning hardware.</a></td>
 					  </tr>
 					  <tr>
-					  <td>14:15</td><td>15:00</td><td> <a href="./data/videos/CVPR2023_tutorial_Clemons.mp4" target="_blank"> <img src="./data/VideoIcon.png" width="20" height="20" title="Video Presentation"> </a> </td><td>Pavlo Molchanov</td><td><a href="./data/presentations/CVPR2023_eff_tutorial_molchanov.pdf" target="_blank">DNN Performance optimization: How to achieve more with less cost, software perspective.</a></td>
+					  <td>14:15</td><td>15:00</td><td> <a href="./data/videos/CVPR2023_PavloMolchanov.mp4" target="_blank"> <img src="./data/VideoIcon.png" width="20" height="20" title="Video Presentation"> </a> </td><td>Pavlo Molchanov</td><td><a href="./data/presentations/CVPR2023_eff_tutorial_molchanov.pdf" target="_blank">DNN Performance optimization: How to achieve more with less cost, software perspective.</a></td>
 					  </tr>
 					  <tr>
 					  <td>15:00</td><td>15:30</td><td></td><td>Coffee Break</td><td></td>
 					  </tr><tr>
-					   <td>15:30</td><td>16:15</td><td> <a href="./data/videos/CVPR2023_tutorial_Clemons.mp4" target="_blank"> <img src="./data/VideoIcon.png" width="20" height="20" title="Video Presentation"> </a> </td><td>Maying Shen</td><td><a href="./data/presentations/CVPR23_Tutorial_Compression_Shen.pdf" target="_blank">Sparsity in DNN and model compression.</a></td>
+					   <td>15:30</td><td>16:15</td><td> <a href="./data/videos/CVPR2023_MayingShen.mp4" target="_blank"> <img src="./data/VideoIcon.png" width="20" height="20" title="Video Presentation"> </a> </td><td>Maying Shen</td><td><a href="./data/presentations/CVPR23_Tutorial_Compression_Shen.pdf" target="_blank">Sparsity in DNN and model compression.</a></td>
 					</tr>
 					   <tr>
-					   <td>16:15</td><td>17:00</td><td> <a href="./data/videos/CVPR2023_tutorial_Clemons.mp4" target="_blank"> <img src="./data/VideoIcon.png" width="20" height="20" title="Video Presentation"> </a> </td><td>Hongxu (Danny) Yin</td><td><a href="./data/presentations/CVPR-23-tutorial_EfficientAndReliableDL_Yin.pdf" target="_blank">Towards Efficient and Reliable Deep Learning - Research Insights.</a></td>
+					   <td>16:15</td><td>17:00</td><td> <a href="./data/videos/cvpr2023_DannyYin.mp4" target="_blank"> <img src="./data/VideoIcon.png" width="20" height="20" title="Video Presentation"> </a> </td><td>Hongxu (Danny) Yin</td><td><a href="./data/presentations/CVPR-23-tutorial_EfficientAndReliableDL_Yin.pdf" target="_blank">Towards Efficient and Reliable Deep Learning - Research Insights.</a></td>
 					</tr>
 				  </table>
 								
