--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 			  <p style="text-align:center">
 				<img src="data/nvidia.png" alt="Nvidia" style="width:100px;max-width:15%;min-width:75px">					  
 				</p>			
-			<p style="text-align:center">
+		<!--	<p style="text-align:center">
 				<img src="data/audience.png" alt="attendance" style="width:800px;max-width:100%;min-width:800px">
-			</p>			
+			</p>
+		-->			
 			<tr style="padding:0px">
 			<td style="padding:0px">				
 			  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -49,16 +50,18 @@
 					<tr>
 					  <td>13:30</td><td>13:35</td><td></td><td>Opening Remarks</td>
 					  </tr><tr>
-						<td>13:35</td><td>14:30</td><td> <td>Jason Clemons</td><td>Foundations of Deep Learning hardware.</td>
+						<td>13:35</td><td>14:30</td> <td></td> <td>Jason Clemons</td> <td></td> <td>Foundations of Deep Learning hardware.</td>
 					  </tr>
 					  <tr>
-					  <td>14:35</td><td>15:30</td><td>  </td><td>MAying Shen<td>Neural Network Acceleration.</td>
+					  <td>14:35</td><td>15:30</td> <td></td> <td>Maying Shen<td>  <td>Neural Network Acceleration.</td>
 					  </tr>
 					  <tr>
 					  <td>15:00</td><td>15:30</td><td></td><td>Coffee Break</td><td></td>
 					  </tr>
 					   <tr>
-					   <td>15:30</td><td>16:30</td><td> <td>Hongxu (Danny) Yin</td>Accelerating Foundational Models - Research Insights.</td>
+					   <td>15:30</td><td>16:30</td><td> <td>Hongxu (Danny) Yin</td><td></td><td>Accelerating Foundational Models - Research Insights.</td>
+					</tr>
+					<tr>  
 					   <td>16:30</td><td>16:35</td><td></td><td>Closing Remarks</td>
 					</tr>
 				  </table>
