--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					  <td>15:00</td><td>15:30</td><td></td><td>Coffee Break</td><td></td>
 					  </tr>
 					   <tr>
-					   <td>15:30</td><td>16:30</td><td> <td>Hongxu (Danny) Yin</td><td></td><td>Accelerating Foundational Models - Research Insights.</td>
+					   <td>15:30</td><td>16:30</td><td> <td>Hongxu (Danny) Yin</td><td></td><td>Efficient Vision Language Models.</td>
 					</tr>
 					<tr>  
 					   <td>16:30</td><td>16:35</td><td></td><td>Closing Remarks</td>
