--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<tr>
 					  <td>13:30</td><td>13:35</td><td></td><td>Opening Remarks</td>
 					  </tr><tr>
-						<td>13:35</td><td>14:30</td> <td></td> <td>Jason Clemons</td> <td></td> <td>Foundations of Deep Learning hardware.</td>
+						<td>13:35</td><td>14:30</td> <td></td> <td>Jason Clemons</td> <td></td> <td> Foundations of DL Hardware And How to Apply Them.</td>
 					  </tr>
 					  <tr>
 					  <td>14:35</td><td>15:30</td> <td></td> <td>Maying Shen<td>  <td>Neural Network Acceleration.</td>
