--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 			<td style="padding:0px">				
 			  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 				<tr style="padding:0px">  
-				  <td style="width:80%;vertical-align:top">									      					  
+				  <td style="width:80%;vertical-align:top">
+					<p style="text-align:center">
+						<font size="+4">Summit 447</font>
+				  </p>
+														      					  
 					  <p style="text-align:left">
 	  					  <font size="+2">Summary</font>
 					  </p>
