--- a/index.html
+++ b/index.html
@@ -35,12 +35,24 @@
 					  </p>
 					  This tutorial focuses on describing techniques to allow deep learning practitioners to accelerate the training and inference of large deep networks while also reducing memory requirements across a spectrum of off-the-shelf hardware for important applications such as autonomous driving and large language models. Topics include, but are not limited to:
                       <ul>
-					    <li>Deep learning specialized hardware overview. We review the architecture of the most used deep learning acceleration hardware, including the main computational processors and memory modules.</li>
-                        <li>How deep learning is performed on this hardware. We cover aspects of algorithmic intensity and an overview of theoretical aspects of computing. Attendees will learn how to estimate processing time and latency by looking only at hardware specs and the network architecture.</li>
-                        <li>Best practices for acceleration. We provide an overview of best practices for designing efficient neural networks including channel number selection, compute heavy operations, or reduction operations among others.</li>
-                        <li>Existing tools for model acceleration. In this part we will focus on existing tools to accelerate a trained neural network on GPU devices. We will particularly discuss operation folding, TensorRT, ONNX graph optimization, sparsity.</li>
-                        <li>Research overview of recent techniques. In the last part, we will focus on recent advanced techniques for post training model optimization including pruning, quantization, model distillation or NAS among others.</li>
-                    </ul>
+					<li>Deep learning specialized hardware overview. We will review the architecture of most commonly used deep
+						learning acceleration hardware: GPU and TPU. We will cover main computational processors and memory
+						modules.</li>
+						<li>How deep learning is performed on this hardware. We will cover aspects of algorithmic intensity and
+						provide overview of theoretical aspects of compute. Attendees will learn how to estimate processing time and
+						latency by looking only at hardware specs and the network architecture.</li>
+						<li>Best practices for acceleration. We will provide an overview of best practices to design efficient neural
+						networks. Topics of interest will include guidance for channel number selection, compute heavy operations,
+						reduction operations etc.</li>
+						<li>Existing tools for model acceleration. In this part we will focus on existing tools to accelerate a trained
+						neural network on GPU devices. Particularly, we will discuss operation folding, TensorRT, ONNX graph
+						optimization, sparsity.</li>
+						<li>Research overview of recent techniques. This part will cover most recent advanced techniques for post
+						training model optimization with the focus on most recent works (past 4 years). Range of topics will include
+						pruning, quantization, model distillation, NAS etc.</li>
+					    <li>Foundation models. This part will cover most recent advanced techniques for training and deploying foun-
+							dation models efficiently.</li>
+							                    </ul>
 					  <br>
 				  </td>				  
 				</tr>
