--- a/index.html
+++ b/index.html
@@ -16,24 +16,23 @@
 			  </p>			  
 			  <p style="text-align:center">
 				<img src="data/nvidia.png" alt="Nvidia" style="width:100px;max-width:15%;min-width:75px">					  
-				</p>			
-		<!--	<p style="text-align:center">
-				<img src="data/audience.png" alt="attendance" style="width:800px;max-width:100%;min-width:800px">
-			</p>
-		-->			
+				</p>				
 			<tr style="padding:0px">
 			<td style="padding:0px">				
 			  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 				<tr style="padding:0px">  
 				  <td style="width:80%;vertical-align:top">
 					<p style="text-align:center">
-						<font size="+4">Summit 447</font>
+						<font size="+4">Room 205 A, Music Hall
+							Thu Jun 12th 1 p.m. to 5 p.m. 
+							Nashville
+						</font>
 				  </p>
 														      					  
 					  <p style="text-align:left">
 	  					  <font size="+2">Summary</font>
 					  </p>
-					  This tutorial focuses on describing techniques to allow deep learning practitioners to accelerate the training and inference of large deep networks while also reducing memory requirements across a spectrum of off-the-shelf hardware for important applications such as autonomous driving and large language models. Topics include, but are not limited to:
+					  This year, the tutorial focuses on describing techniques to allow deep learning practitioners to accelerate the training and inference of large deep transformer networks while also reducing memory requirements across a spectrum of off-the-shelf hardware for important applications such as autonomous driving and large language models. Topics include, but are not limited to:
                       <ul>
 					<li>Deep learning specialized hardware overview. We will review the architecture of most commonly used deep
 						learning acceleration hardware: GPU and TPU. We will cover main computational processors and memory
@@ -61,7 +60,7 @@
 		  <hr>
 		  <div>					
 			<div></div>
-				<h2><font size="+2">Schedule</font> </h2>								
+<!--				<h2><font size="+2">Schedule</font> </h2>								
 				<table>
 					<tr>
 					  <td>13:30</td><td>13:35</td><td></td><td>Opening Remarks</td>
@@ -81,7 +80,7 @@
 					   <td>16:30</td><td>16:35</td><td></td><td>Closing Remarks</td>
 					</tr>
 				  </table>
-								
+-->								
 			</div>		
 			<hr>
 			<div>
