--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 				<tr style="padding:0px">  
 				  <td style="width:80%;vertical-align:top">
 					<p style="text-align:center">
-						<font size="+4">Room 205 A, Music Hall
-							Thu Jun 12th 1 p.m. to 5 p.m. 
-							Nashville
+						<font size="+4">Room 205 A, Music Hall 
+						<br>Thu Jun 12th 1 p.m. to 5 p.m. </br>
+						<br>Nashville</br>
 						</font>
 				  </p>
 														      					  
