--- a/index.html
+++ b/index.html
@@ -93,12 +93,15 @@
 			-->
 			<table>
 				<tr>
-				  <td><img src="./data/maying.png" width="125" height="150" title="Maying Shen"></td><td>		
+					<td><img src="./data/AlexSun.png" width="125" height="150" title="Maying Shen"></td><td>		
+						Alex (Xinglong) Sun is an AI researcher at the Applied AV Research team at NVIDIA. I am interested in efficient deep learning, visual perception, and end-to-end autonomous driving.</td>
+<!--				  <td><img src="./data/maying.png" width="125" height="150" title="Maying Shen"></td><td>		
 					Maying Shen is currently a senior autonomous driving research engineer at NVIDIA. Prior to joining NVIDIA,
 	she graduated from CMU majoring in computer vision, where she developed her interest in seeing the world through
 	the computer's eyes. Her interests include deep learning efficiency from both, training and inference side, working
 	on aspects such as neural network pruning, distillation, or quantization among others.</td>
 	</tr>
+	-->
 	<tr>			  <td>	<img src="./data/clemons.jpg" width="125"  height="150" title="Jason Clemons"></td><td>
 		Jason Clemons received his Ph.D. in computer science and engineering from the University of Michigan, Ann
 		Arbor, MI, USA where he researched computer architectures for mobile computer vision. In his senior research
