--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 			<li>Maying Shen, Senior Research Engineer
 			<li>Jason Clemons, Senior Research Scientist
 			<li>Hongxu (Danny) Yin, Senior Research Scientist
-			<li>Pavlo Molchanov, Principal Research Scientist
-			<li>Jose M. Alvarez, Director, Applied research 
+			<li>Pavlo Molchanov, Director of research 
+			<li>Jose M. Alvarez, Director of research 
 			<li>Jan Kautz, VP of research
 			</ul> 
 		</div>		
