--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@
 			<table>
 				<tr>
 					<td><img src="./data/AlexSun.png" width="125" height="150" title="Maying Shen"></td><td>		
-						Alex (Xinglong) Sun is an AI researcher at the Applied AV Research team at NVIDIA. Prior to joining NVIDIA,
-						Alex pursued his graduate studies and research at Stanford, UIUC, and INRIA majoring in computer science. 
-						I am interested in efficient deep learning, visual perception, and end-to-end autonomous driving.</td>
+						Alex (Xinglong) Sun is an AI researcher at the Applied AV Research team at NVIDIA. Prior to joining NVIDIA, Alex pursued his graduate studies and research at Stanford and UIUC majoring in computer science. He is interested in efficient deep learning, visual perception, and end-to-end autonomous driving.</td>
 <!--				  <td><img src="./data/maying.png" width="125" height="150" title="Maying Shen"></td><td>		
 					Maying Shen is currently a senior autonomous driving research engineer at NVIDIA. Prior to joining NVIDIA,
 	she graduated from CMU majoring in computer vision, where she developed her interest in seeing the world through
