--- a/index.html
+++ b/index.html
@@ -60,27 +60,24 @@
 		  <hr>
 		  <div>					
 			<div></div>
-<!--				<h2><font size="+2">Schedule</font> </h2>								
+				<h2><font size="+2">Schedule</font> </h2>								
 				<table>
 					<tr>
-					  <td>13:30</td><td>13:35</td><td></td><td>Opening Remarks</td>
+					  <td>13:00</td><td>13:05</td><td></td><td>Opening Remarks</td>
 					  </tr><tr>
-						<td>13:35</td><td>14:30</td> <td></td> <td>Jason Clemons</td> <td></td> <td> Foundations of DL Hardware And How to Apply Them.</td>
+						<td>13:05</td><td>14:30</td> <td></td> <td>Jason Clemons</td> <td></td> <td>Understanding Hardware For Optimization.</td>
 					  </tr>
 					  <tr>
-					  <td>14:35</td><td>15:30</td> <td></td> <td>Maying Shen<td>  <td>Neural Network Acceleration.</td>
-					  </tr>
-					  <tr>
-					  <td>15:00</td><td>15:30</td><td></td><td>Coffee Break</td><td></td>
+					  <td>14:40</td><td>15:15</td> <td></td> <td>Alex Sun<td>  <td>  </td>
 					  </tr>
 					   <tr>
 					   <td>15:30</td><td>16:30</td><td> <td>Hongxu (Danny) Yin</td><td></td><td>Efficient Vision Language Models.</td>
 					</tr>
 					<tr>  
-					   <td>16:30</td><td>16:35</td><td></td><td>Closing Remarks</td>
+					   <td>16:30</td><td>17:00</td><td></td><td>Q&A and Closing Remarks</td>
 					</tr>
 				  </table>
--->								
+								
 			</div>		
 			<hr>
 			<div>
