--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					  <td>14:40</td><td>15:15</td> <td></td> <td>Alex Sun<td>  <td>  </td>
 					  </tr>
 					   <tr>
-					   <td>15:30</td><td>16:30</td><td> <td>Hongxu (Danny) Yin</td><td></td><td>Efficient Vision Language Models.</td>
+					   <td>15:30</td><td>16:30</td><td> <td>Hongxu (Danny) Yin</td><td></td><td>Towards Efficient Multi-modal Foundation Models.</td>
 					</tr>
 					<tr>  
 					   <td>16:30</td><td>17:00</td><td></td><td>Q&A and Closing Remarks</td>
