--- a/index.html
+++ b/index.html
@@ -64,11 +64,25 @@
 				<table>
 					<tr>
 					  <td>13:00</td><td>13:05</td><td></td><td>Opening Remarks</td>
-					  </tr><tr>
+					  </tr>
+					  <tr>
 						<td>13:05</td><td>14:30</td> <td></td> <td>Jason Clemons</td> <td></td> <td>Understanding Hardware For Optimization.</td>
 					  </tr>
 					  <tr>
-					  <td>14:40</td><td>15:15</td> <td></td> <td>Alex Sun<td>  <td>  </td>
+						<td></td><td></td> <td></td> <td></td> <td></td> <td>Hardware Overview.</td>
+					  </tr>
+					  <tr>
+						<td></td><td></td> <td></td> <td></td> <td></td> <td>DL Performance Considerations for GPUs.</td>
+					  </tr>
+					  <tr>
+						<td></td><td></td> <td></td> <td></td> <td></td> <td>Suggestions.</td>
+					  </tr>
+					  <tr>
+						<td></td><td></td> <td></td> <td></td> <td></td> <td>Some Tools for Optimization,</td>
+					  </tr>
+
+					  <tr>
+					  <td>14:40</td><td>15:15</td> <td></td> <td>Alex Sun<td>  <td> hardware-aware transformer acceleration - maximizing your GPU utilization.</td>
 					  </tr>
 					   <tr>
 					   <td>15:30</td><td>16:30</td><td> <td>Hongxu (Danny) Yin</td><td></td><td>Towards Efficient Multi-modal Foundation Models.</td>
